syntax = "proto3";

option java_multiple_files = true;
option java_package = "alistar.moneysave.bank";
option java_outer_classname = "BankProto";
option objc_class_prefix = "BNK";

import "google/protobuf/empty.proto";

package bank;

service BankService {
  // Creates a bank
  rpc CreateBank (CreateBankRequest) returns (CreateBankReply) {}

  // Removes a bank
  rpc RemoveBank (RemoveBankRequest) returns (RemoveBankReplay) {}

  // Return list of banks
  rpc GetBanks (GetBanksRequest) returns (GetBanksReplay) {}
}

message CreateBankRequest {
  string name = 1;
  string persianName = 2;
  string smsRegex = 3;
}

message CreateBankReply {
  Bank bank = 1;
}

message RemoveBankRequest {
  string id = 1;
}

message RemoveBankReplay {
  string message = 1;
}

message Bank {
  string id = 1;
  string name = 2;
  string persianName = 3;
  string smsRegex = 4;
}

message GetBanksRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetBanksReplay {
  repeated Bank banks = 1;
}